Added connection string

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Asr-1C328954-6709-4130-A9E2-B8A4C8B22A0E;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=wdt2019.australiasoutheast.cloudapp.azure.com;Database=s3707189;User ID=s3707189;Password=abc123;"
   },
   "Logging": {
     "LogLevel": {
