Fixed IdentityUser problem. replaced with AppUser.

--- a/Asr.csproj
+++ b/Asr.csproj
@@ -15,4 +15,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="2.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Data\Migrations\00000000000000_CreateIdentitySchema.cs" />
+  </ItemGroup>
 </Project>
