--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=wdt2019.australiasoutheast.cloudapp.azure.com;Database=s3707189;User ID=s3707189;Password=abc123;"
   },
+  "Authentication:Google:ClientId": "983515873978-10gqh5o6lfmf0n4aki240j8r72sb7frs.apps.googleusercontent.com",
+  "Authentication:Google:ClientSecret": "pU1nb1HbAHX8gcoY6dz0syAE",
+  //"Authentication:Google:ClientId": "855148469927-no8107irtrv8jajvagb5fhd9h65vrju2.apps.googleusercontent.com",
+  //"Authentication:Google:ClientSecret": "dWLv0G16ubZumN1OVs5oHW8r",
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
