Added roles and able to register email and get a role. Incomplete yet.

--- a/Asr.csproj
+++ b/Asr.csproj
@@ -20,5 +20,9 @@
     <Compile Remove="Migrations\20190123032020_Initial.cs" />
     <Compile Remove="Migrations\20190123032020_Initial.Designer.cs" />
     <Compile Remove="Migrations\ApplicationDbContextModelSnapshot.cs" />
+    <Compile Remove="Areas\Identity\Data\ApplicationDbContext.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Areas\Identity\Data\" />
   </ItemGroup>
 </Project>
