Added handling errors, invalid url.
Currently disabled by commenting startup.cs line.

--- a/Asr.csproj
+++ b/Asr.csproj
@@ -24,5 +24,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Areas\Identity\Data\" />
+    <Folder Include="Views\StatusCode\" />
   </ItemGroup>
 </Project>
