--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=wdt2019.australiasoutheast.cloudapp.azure.com;Database=s3707189;User ID=s3707189;Password=abc123;",
-    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Asr;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=wdt2019.australiasoutheast.cloudapp.azure.com;Database=s3697158;User ID=s3697158;Password=abc123;"
   },
   "Authentication:Google:ClientId": "983515873978-10gqh5o6lfmf0n4aki240j8r72sb7frs.apps.googleusercontent.com",
   "Authentication:Google:ClientSecret": "pU1nb1HbAHX8gcoY6dz0syAE",
