--- a/AsrWebAPI/appsettings.json
+++ b/AsrWebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=wdt2019.australiasoutheast.cloudapp.azure.com;Database=s3697158;User ID=s3697158;Password=abc123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
