--- a/AsrAngular/AsrAngular.csproj
+++ b/AsrAngular/AsrAngular.csproj
@@ -25,10 +25,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Remove="ClientApp\src\app\Components\fetch-slots\fetch-slots.component.ts" />
     <None Remove="ClientApp\src\app\Services\slots.service.ts" />
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Include="ClientApp\src\app\Components\fetch-slots\fetch-slots.component.ts" />
     <TypeScriptCompile Include="ClientApp\src\app\Services\slots.service.ts" />
   </ItemGroup>
 
