--- a/AsrAngular/AsrAngular.csproj
+++ b/AsrAngular/AsrAngular.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -27,6 +28,11 @@
   <ItemGroup>
     <None Remove="ClientApp\src\app\Components\fetch-slots\fetch-slots.component.ts" />
     <None Remove="ClientApp\src\app\Services\slots.service.ts" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AsrWebAPI\AsrWebAPI.csproj" />
+    <ProjectReference Include="..\Asr\Asr.csproj" />
   </ItemGroup>
 
   <ItemGroup>
