--- a/AsrAngular/appsettings.json
+++ b/AsrAngular/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=wdt2019.australiasoutheast.cloudapp.azure.com;Database=s3707189;User ID=s3707189;Password=abc123;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
