--- a/AsrAngular/AsrAngular.csproj
+++ b/AsrAngular/AsrAngular.csproj
@@ -29,6 +29,10 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\src\app\Components\" />
+    <Folder Include="ClientApp\src\app\Services\" />
+    <Folder Include="Data\" />
+    <Folder Include="Data\DataManager\" />
+    <Folder Include="Models\EmployeeModelsRemoveMe\" />
   </ItemGroup>
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
